[gd_scene load_steps=4 format=3 uid="uid://coo6388qn7pjc"]

[ext_resource type="FontFile" uid="uid://mpsypb6l7bqe" path="res://fonts/Xolonium-Regular.ttf" id="1"]
[ext_resource type="Script" path="res://src/UI.gd" id="2"]
[ext_resource type="Script" path="res://src/ui/TextEdit.gd" id="3"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("2")

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.5
offset_top = -95.0
offset_right = 105.5
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 60
text = "AjEdReZ"

[node name="Label2" type="Label" parent="."]
offset_left = 183.0
offset_top = 222.0
offset_right = 230.0
offset_bottom = 248.0
text = "Name"

[node name="TextEdit" type="TextEdit" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 27.0
offset_top = 100.0
offset_right = 181.0
offset_bottom = 137.0
grow_horizontal = 2
grow_vertical = 2
text = "127.0.0.1"
script = ExtResource("3")

[node name="TextEditName" type="TextEdit" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 24.0
offset_top = -8.0
offset_right = 172.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
text = "Player"

[node name="Button1" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.0
offset_top = 47.0
offset_right = 4.0
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2
text = "Create Server"

[node name="Button2" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.0
offset_top = 101.0
offset_right = 5.0
offset_bottom = 132.0
grow_horizontal = 2
grow_vertical = 2
text = "Join Server"
